--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
-EUREKA_SERVER_URL=http://localhost:8761/eureka/
+SERVER_PORT=8080
+APPLICATION_NAME=api-gateway
+ROUTE_SECURITY_URI=lb://security-ms
+ROUTE_STORAGE_URI=lb://storage-ms
+EUREKA_CLIENT_ENABLE=true
+EUREKA_SERVER_URL=http://host.docker.internal:8761/eureka/
+EUREKA_CLIENT_HEARTBEAT=30
+EUREKA_CLIENT_INSTANCE_REPLICATION_INTERVAL=60
+EUREKA_CLIENT_LEASE_EXPIRATION_DURATION=90
+ACTUATOR_EXPOSURE=health,env
+ACTUATOR_SHOW_ENV=NEVER
 JWT_SECRET=r0M7GqBT5VAmx2871SJN88g7fdOpVIOh
