--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,11 +5,13 @@ spring-dependency-management = "1.1.7"
 spring-cloud = "2023.0.5"
 lombok="1.18.34"
 jjwt="0.12.6"
+spring-doc="2.6.0"
 thluon-rest="v0.1.0-SNAPSHOT2"
 [plugins]
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot"  }
 spring-dependency-management = {id="io.spring.dependency-management",version.ref="spring-dependency-management"}
 [libraries]
+springdoc-webflux={module="org.springdoc:springdoc-openapi-starter-webflux-ui",version.ref="spring-doc"}
 lombok={module="org.projectlombok:lombok",version.ref="lombok"}
 spring-cloud-dependencies = { module = "org.springframework.cloud:spring-cloud-dependencies", version.ref = "spring-cloud" }
 jjwt-core={group="io.jsonwebtoken",name="jjwt",version.ref="jjwt"}
@@ -18,3 +20,4 @@ jjwt-jackson={group="io.jsonwebtoken",name="jjwt-jackson",version.ref="jjwt"}
 thluon-rest= {module="com.github.thientoan3596:spring.rest-common",version.ref="thluon-rest"}
 [bundles]
 jjwt=["jjwt-core","jjwt-impl","jjwt-jackson"]
+
